--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a href="https://github.com/AdityaYadav05" target="_blank" class="social-link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://linkedin.com/in/Adiya-Yadav" target="_blank" class="social-link">
+                    <a href="https://www.linkedin.com/in/aditya-yadav9936096/" target="_blank" class="social-link">
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="mailto:adityayadavvv12@gmail.com" class="social-link">
